[gd_scene load_steps=2 format=3 uid="uid://characterselect"]

[ext_resource type="Script" path="res://scripts/menu/CharacterSelect.gd" id="1_script"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.05, 0.12, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 40.0
offset_right = 150.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 32
text = "Chọn Tu Sĩ"
horizontal_alignment = 1

[node name="CharactersContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -150.0
offset_right = 350.0
offset_bottom = 120.0
theme_override_constants/separation = 30
alignment = 1

[node name="CharacterInfo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -130.0
offset_right = 200.0
offset_bottom = -70.0
theme_override_font_sizes/font_size = 14
text = "Chọn một tu sĩ để bắt đầu"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ConfirmButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -55.0
offset_right = 170.0
offset_bottom = -15.0
text = "✓ Xác Nhận"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -55.0
offset_right = -20.0
offset_bottom = -15.0
text = "← Quay Lại"
